Break up main di yml

--- a/configuration/di.yml
+++ b/configuration/di.yml
@@ -1,5 +1,7 @@
 imports:
     - resource: di.services.yml
+    - resource: di.services.api.yml
+    - resource: di.services.middleware.yml
     - resource: di.pages.yml
     - resource: di.api.yml
 
@@ -170,7 +172,7 @@ services:
             - @service_container
             - @slim.request
             - @session
-            - @user.repo
+            - @doctrine.em
         calls:
             - ['addGlobal', ['applicationTitle', %application.title%]]
             - ['addGlobal', ['applicationSha', %application.sha%]]
@@ -210,157 +212,6 @@ services:
 
     ansi.convert.theme:
         class: 'SensioLabs\AnsiConverter\Theme\Theme'
-
-    ######################################################################################################################
-    # MIDDLEWARE
-    ######################################################################################################################
-
-    # Bounce unauthenticated users
-    login.bouncer:
-        class: 'QL\Hal\Middleware\Bouncer\LoginBouncer'
-        arguments:
-            - @session
-            - @user.repo
-            - @service_container
-            - @url.helper
-            - @slim.request
-
-    # Bounce non-admins
-    admin.bouncer:
-        class: 'QL\Hal\Middleware\Bouncer\AdminBouncer'
-        arguments:
-            - @service_container
-            - @permissions
-            - @denied.twig
-            - @login.bouncer
-            - @slim.response
-
-    # Bounce non-super-admins
-    superadmin.bouncer:
-        class: 'QL\Hal\Middleware\Bouncer\SuperAdminBouncer'
-        arguments:
-            - @service_container
-            - @permissions
-            - @denied.twig
-            - @login.bouncer
-            - @slim.response
-
-    # Bounce users who don't have access to modify a repository
-    repoadmin.bouncer:
-        class: 'QL\Hal\Middleware\Bouncer\RepoAdminBouncer'
-        arguments:
-            - @service_container
-            - @permissions
-            - @denied.twig
-            - @login.bouncer
-            - @repository.repo
-            - @slim.response
-            - @slim.not.found
-            - @slim.route.parameters
-
-    # Bounce unauthenticated api clients
-    api.auth.bouncer:
-        class: 'QL\Hal\Middleware\Bouncer\ApiAuthBouncer'
-        arguments:
-            - @service_container
-            - @ldap
-            - @token.repo
-
-    cachedApi.middleware:
-        class: 'QL\Hal\Middleware\CachedApiMiddleware'
-        arguments:
-            - @response.formatter
-            - @slim.response
-
-    ####################################################################################################################
-    # API Helpers
-    ####################################################################################################################
-
-    response.formatter:
-        class: 'QL\Hal\Api\ResponseFormatter'
-        arguments:
-            - @slim.request
-            - @slim.response
-            - @url.helper
-            - @normalizer
-            - @hypermedia.formatter
-
-    hypermedia.formatter:
-        class: 'QL\Hal\Api\Utility\HypermediaFormatter'
-        arguments:
-            - @url.helper
-
-    normalizer:
-        class: 'QL\Hal\Api\Normalizer'
-        arguments:
-            - @normalizer.build
-            - @normalizer.deployment
-            - @normalizer.environment
-            - @normalizer.log.event
-            - @normalizer.group
-            - @normalizer.push
-            - @normalizer.repository
-            - @normalizer.server
-            - @normalizer.user
-            - @normalizer.timepoint
-            - @normalizer.url
-
-    normalizer.build:
-        class: 'QL\Hal\Api\Normalizer\BuildNormalizer'
-        arguments:
-            - @url.helper
-            - @normalizer.user
-            - @normalizer.repository
-            - @normalizer.environment
-
-    normalizer.deployment:
-        class: 'QL\Hal\Api\Normalizer\DeploymentNormalizer'
-        arguments:
-            - @normalizer.repository
-            - @normalizer.server
-
-    normalizer.environment:
-        class: 'QL\Hal\Api\Normalizer\EnvironmentNormalizer'
-
-    normalizer.log.event:
-        class: 'QL\Hal\Api\Normalizer\EventLogNormalizer'
-        arguments:
-            - @normalizer.build
-            - @normalizer.push
-
-    normalizer.group:
-        class: 'QL\Hal\Api\Normalizer\GroupNormalizer'
-
-    normalizer.url:
-        class: 'QL\Hal\Api\Normalizer\HttpUrlNormalizer'
-
-    normalizer.push:
-        class: 'QL\Hal\Api\Normalizer\PushNormalizer'
-        arguments:
-            - @url.helper
-            - @normalizer.user
-            - @normalizer.build
-            - @normalizer.deployment
-            - @normalizer.repository
-
-    normalizer.repository:
-        class: 'QL\Hal\Api\Normalizer\RepositoryNormalizer'
-        arguments:
-            - @url.helper
-            - @normalizer.group
-
-    normalizer.server:
-        class: 'QL\Hal\Api\Normalizer\ServerNormalizer'
-        arguments:
-            - @normalizer.environment
-
-    normalizer.timepoint:
-        class: 'QL\Hal\Api\Normalizer\TimePointNormalizer'
-
-    normalizer.user:
-        class: 'QL\Hal\Api\Normalizer\UserNormalizer'
-        arguments:
-            - @permissions
 
     ####################################################################################################################
     # SESSION
