--- a/configuration/di/controllers.repository.yml
+++ b/configuration/di/controllers.repository.yml
@@ -7,8 +7,7 @@ services:
         class: 'QL\Hal\Controllers\Repository\RepositoriesController'
         arguments:
             - @repositories.twig
-            - @group.repo
-            - @repository.repo
+            - @doctrine.em
             - @slim.response
     repositories.twig:
         parent: 'twig.template'
@@ -44,7 +43,7 @@ services:
     repository.status.sticky.handler:
         class: 'QL\Hal\Controllers\Repository\RepositoryStatusEnvironmentSaveHandler'
         arguments:
-            - @environment.repo
+            - @doctrine.em
             - @slim.request
             - @url
             - @sticky.environment
@@ -54,8 +53,6 @@ services:
         class: 'QL\Hal\Controllers\Repository\AddRepositoryController'
         arguments:
             - @repository.admin.add.twig
-            - @group.repo
-            - @repository.repo
             - @doctrine.em
             - @github
             - @session
@@ -70,8 +67,6 @@ services:
         class: 'QL\Hal\Controllers\Repository\EditRepositoryController'
         arguments:
             - @repository.admin.edit.twig
-            - @group.repo
-            - @repository.repo
             - @doctrine.em
             - @session
             - @url.helper
@@ -86,8 +81,6 @@ services:
     repository.admin.remove.handler:
         class: 'QL\Hal\Controllers\Repository\RemoveRepositoryController'
         arguments:
-            - @repository.repo
-            - @deployment.repo
             - @doctrine.em
             - @session
             - @url.helper
@@ -102,8 +95,7 @@ services:
         class: 'QL\Hal\Controllers\Repository\Deployment\DeploymentController'
         arguments:
             - @repository.deployment.twig
-            - @repository.repo
-            - @deployment.repo
+            - @doctrine.em
             - @eb
             - @slim.response
             - @slim.not.found
@@ -116,10 +108,7 @@ services:
         class: 'QL\Hal\Controllers\Repository\Deployment\DeploymentsController'
         arguments:
             - @repository.deployments.twig
-            - @environment.repo
-            - @server.repo
-            - @repository.repo
-            - @deployment.repo
+            - @doctrine.em
             - @slim.response
             - @slim.not.found
             - @slim.route.parameters
@@ -131,8 +120,7 @@ services:
         class: 'QL\Hal\Controllers\Repository\Deployment\AddDeploymentController'
         arguments:
             - @repository.deployments.add.twig
-            - @server.repo
-            - @repository.repo
+            - @doctrine.em
             - @url
             - @slim.request
             - @slim.response
@@ -171,17 +159,13 @@ services:
             - @slim.route.parameters
     repository.deployment.validator:
         class: 'QL\Hal\Validator\DeploymentValidator'
-        arguments:
-            - @repository.repo
-            - @server.repo
-            - @deployment.repo
+        arguments: [@doctrine.em]
 
     repository.deployment.edit.page:
         class: 'QL\Hal\Controllers\Repository\Deployment\EditDeploymentController'
         arguments:
             - @repository.deployment.edit.twig
-            - @repository.repo
-            - @deployment.repo
+            - @doctrine.em
             - @slim.request
             - @slim.response
             - @slim.not.found
@@ -193,7 +177,6 @@ services:
         class: 'QL\Hal\Controllers\Repository\Deployment\EditDeploymentHandler'
         arguments:
             - @doctrine.em
-            - @deployment.repo
             - @repository.deployment.validator
             - @session
             - @url
@@ -204,7 +187,6 @@ services:
     repository.deployments.remove.handler:
         class: 'QL\Hal\Controllers\Repository\Deployment\RemoveDeploymentHandler'
         arguments:
-            - @deployment.repo
             - @doctrine.em
             - @session
             - @url.helper
@@ -219,8 +201,7 @@ services:
         class: 'QL\Hal\Controllers\Repository\EncryptedProperty\EncryptedPropertiesController'
         arguments:
             - @repository.encrypted.twig
-            - @encrypted.repo
-            - @repository.repo
+            - @doctrine.em
             - @slim.response
             - @slim.not.found
             - @slim.route.parameters
@@ -232,8 +213,7 @@ services:
         class: 'QL\Hal\Controllers\Repository\EncryptedProperty\AddEncryptedPropertyController'
         arguments:
             - @repository.encrypted.add.twig
-            - @repository.repo
-            - @environment.repo
+            - @doctrine.em
             - @slim.request
             - @slim.response
             - @slim.not.found
@@ -245,9 +225,6 @@ services:
         class: 'QL\Hal\Controllers\Repository\EncryptedProperty\AddEncryptedPropertyHandler'
         arguments:
             - @doctrine.em
-            - @encrypted.repo
-            - @repository.repo
-            - @environment.repo
             - @encrypter
             - @session
             - @url
@@ -258,7 +235,6 @@ services:
         class: 'QL\Hal\Controllers\Repository\EncryptedProperty\RemoveEncryptedPropertyHandler'
         arguments:
             - @doctrine.em
-            - @encrypted.repo
             - @session
             - @url
             - @slim.request
